--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 	</div>
 	</header>
 	
-	<div class="about _anim-items">
-		<h1 class="about__title _anim-show _anim-no-hide">About Us</h1>
-		<p class="about__text _anim-show _anim-no-hide">Lorem ipsum dolor, sit amet, consectetur adipisicing elit. Nulla, ad iure at, dolores consectetur deleniti quam enim repudiandae accusantium distinctio est soluta qui ab ipsum, iste officia perferendis quibusdam. Amet.</p>
+	<div class="about _anim-items _anim-no-hide">
+		<h1 class="about__title _anim-show">About Us</h1>
+		<p class="about__text _anim-show">Lorem ipsum dolor, sit amet, consectetur adipisicing elit. Nulla, ad iure at, dolores consectetur deleniti quam enim repudiandae accusantium distinctio est soluta qui ab ipsum, iste officia perferendis quibusdam. Amet.</p>
 		<img src="imgs/podpis.jpg" alt="podpis" class="podpis">
 	</div>
-	<div class="blocks _anim-items">
+	<div class="blocks _anim-items _anim-no-hide">
 		<div class="section1 _anim-slide-to-right">
 			<div class="blocks_content">
 				<div class="blocks__title">Professional Skills</div>
@@ -126,7 +126,7 @@
 		</div>
 		<div class="section2 _anim-slide-to-left"></div>
 	</div>
-	<div class="aqua _anim-items">
+	<div class="aqua _anim-items _anim-no-hide">
 		<div class="container">
 			<div class="aqua__row">
 				<div class="aqua__item _anim-show _anim-no-hide ii1">
