--- a/index.html
+++ b/index.html
@@ -177,6 +177,15 @@
 	<div class="gray-line">
 		<p class="line__text">load more work</p>
 	</div>
+	<div class="video">
+		<h1 class="video__title">Our Work Process</h1>
+		<p class="video__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio obcaecati in repudiandae voluptatibus iste quia esse libero, assumenda exercitationem atque?</p>
+		<div class="container">
+			<div class="player">
+				<iframe width="100%" class="vid" src="https://www.youtube.com/embed/dyEzWeG581A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
