--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
-	<title>Document</title>
+	<title>Пажилой сайт</title>
+	<link rel="icon" href="imgs/logo.png">
 	<link rel="stylesheet" href="style.css">
 	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito+Sans&display=swap" rel="stylesheet">
@@ -82,7 +83,7 @@
 				<li>contact</li>
 			</a>
 		</ul>
-		<a href="#" onclick="closeForm()">
+		<a href="#" onclick="closeForm()" class="aye">
 			<div class="containerr change">
 		    <div class="bar1"></div>
 		    <div class="bar2"></div>
