--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 		<p class="video__text _anim-show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio obcaecati in repudiandae voluptatibus iste quia esse libero, assumenda exercitationem atque?</p>
 		<div class="container">
 			<div class="player">
-				<iframe width="100%" class="vid" src="https://www.youtube.com/embed/dyEzWeG581A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="100%" class="vid" src="https://www.youtube.com/embed/5qap5aO4i9A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
@@ -275,7 +275,7 @@
 	<div class="need">
 		<div class="need__container _anim-items">
 			<h1 class="need__title">Need a Project?</h1>
-			<p class="need__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea eius dolorum quae impedit provident dolore non laborum dolorem eum velit!</p>
+			<p class="need__text">Lorem iposum dolor sit amet consectetur adipisicing elit. Ea eius dolorum quae impedit provident dolore non laborum dolorem eum velit!</p>
 			<div class="form">
 				<form action="#" id="form" class="form__body">
 					<div class="first-forms">
@@ -283,7 +283,7 @@
 							<input type="text" id="formName" name="name" class="form__input _req" placeholder="Your Name">
 						</div>
 						<div class="form__item">
-							<input type="text" id="formEmail" name="email" class="form__input _req _email" placeholder="Your Email">
+							<input type="email" id="formEmail" name="email" class="form__input _req _email" placeholder="Your Email">
 						</div>
 					</div>
 					<div class="form__item">
@@ -297,6 +297,42 @@
 			</div>
 		</div>
 	</div>
+	<footer>
+		<div class="container">
+			<div class="footer__row">
+				<div class="footer__left">
+					<div class="footer__left__item">
+						<h2 class="footer__left__item__title">Zhmych airlanes inc.</h2>
+						<p class="footer__left__item__text">Lorem ipsum dolor sit amet<br>consectetur adipisicing elit.</p>
+					</div>
+					<div class="footer__left__item">
+						<p class="footer__left__item__text">Lorem ipsum dolor<br>sit amet.
+						</p>
+					</div>
+				</div>
+				<div class="footer__right">
+					<ul class="footer__right__list">
+						<li><a href="#" target="_blank">Projects</a></li>
+						<li><a href="#" target="_blank">About</a></li>
+						<li><a href="#" target="_blank">Services</a></li>
+						<li><a href="#" target="_blank">Carreer</a></li>
+					</ul>
+					<ul class="footer__right__list">
+						<li><a href="#" target="_blank">News</a></li>
+						<li><a href="#" target="_blank">Events</a></li>
+						<li><a href="#" target="_blank">Contact</a></li>
+						<li><a href="#" target="_blank">Legals</a></li>
+					</ul>
+					<ul class="footer__right__list">
+						<li><a href="#" target="_blank">Facebook</a></li>
+						<li><a href="#" target="_blank">Twitter</a></li>
+						<li><a href="#" target="_blank">Instagram</a></li>
+						<li><a href="#" target="_blank">Dribble</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
