--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 				<div class="header__right">
 					<h1 class="header__title _anim-items _anim-no-hide">We design and Develop</h1>
 					<p class="header__text _anim-items _anim-no-hide">Lorem ipsum, dolor sit amet, consectetur adipisicing elit. Molestias nulla ratione, sapiente rerum ea dicta delectus eveniet iure fuga velit.</p>
-					<a href="#" class="button">contact us
-					</a>
+					<a href="#" class="button">contact us</a>
 				</div>
 			</div>
 		</div>
